Internal change
PiperOrigin-RevId: 620810210